	Fixed #IP-1240: Statistics wrong (too high) - only admin values
	Fixed #IP-1241: Allow customers to generate self-signed SSL certificate for their domains through the frontEnd
	Fixed #IP-1246: PHP modules - Priority order - Priority is not honored in some contexts
	Fixed #IP-1247: Apache2 - vlogger - failed unexpectedly
	Fixed #IP-1252: Unable to add SSL certificate in some contexts

------------------------------------------------------------------------------------------------------------------------
1.2.0
------------------------------------------------------------------------------------------------------------------------

2014-12-30: Laurent Declercq
	RELEASE i-MSCP 1.2.0

BACKEND
	Added: FETCH_MODE option in iMSCP::Database::mysql
	Added: iMSCP::ProgramFinder module which allow to test whether programs are available on the executable search path
	Added: iMSCP::Service module for service management ( start, stop, restart, reload, status )
	Added: Methods which allow to enable/disable apache conffiles from the conf-available directory ( Apache 2.4.x )
	Added: pigz ( Parallel Implementation of GZip ) algorithm for backups compression
	Added: Standard directory which allow to load apache conffiles prior any other vhost file ( Apache )
	Added: --verbose command line options for all scripts
	Changed: i-MSCP is now run through a dedicated httpd instance by using the nginx Web server
	Changed: Logfiles are now written as soon as possible ( allows to mitigate memory consumption )
	Changed: The quota accounting script is now run every 30 minutes
	Fixed: Backend logs which are older than 7 days are never removed

CONFIGS
	Fixed: The time at which the backup script must be run is no configurable
	Renamed: /etc/imscp/hooks.d directory to /etc/imscp/listeners.d
	Removed: Roundcube configuration directory ( now shipped with the roundcube package )

DAEMON
	Fixed: The server traffic must be collected before any stopping attempt ( imscp_network )

DISTROS