@@ -1832,16 +1832,16 @@ tidy.clean_output = Off
 [soap]
 ; Enables or disables WSDL caching feature.
 ; http://php.net/soap.wsdl-cache-enabled
-soap.wsdl_cache_enabled=1
+soap.wsdl_cache_enabled= 1
 
 ; Sets the directory name where SOAP extension will put cache files.
 ; http://php.net/soap.wsdl-cache-dir
-soap.wsdl_cache_dir="/tmp"
+soap.wsdl_cache_dir= "/tmp"
 
 ; (time to live) Sets the number of second while cached file will be used
 ; instead of original one.
 ; http://php.net/soap.wsdl-cache-ttl
-soap.wsdl_cache_ttl=86400
+soap.wsdl_cache_ttl= 86400
 
 ; Sets the size of the cache limit. (Max. number of WSDL files to cache)
 soap.wsdl_cache_limit = 5
